Добавлен POM конфигурация и главный класс приложения